syntax = "proto3";

package ccp;

option go_package = "github.com/brendoncarroll/webfs/pkg/cells/cryptocell";

import "crypto.proto";

message CellContents {
    Who who = 1;
    int32 who_author = 2;
    map<int32, Sig> who_sigs = 3;

    What what = 4;
    int32 what_author = 5;
    Sig what_sig = 6;
}

message Who {
    repeated Entity entities = 1;

    repeated int32 admin = 2;
    repeated int32 write = 3;
    repeated int32 read = 4;
}

message What {
    EncMsg payload = 1;
    repeated AsymEncMsg deks = 2;
}
